<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Type in title and scan barcodes!</string>
    <string name="app_name">InventoryScanner</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    
    <string name="about">About</string>
    <string name="about_title">InventoryScanner</string>
    <string name="about_ok">OK</string>
    <string name="about_detail">Copyright &#169; 2012 Martin Helff\nThis software is distributed under the terms of the GNU General Public License v3\nhttps://github.com/mhelff/inventoryscanner/\nThis software includes code from the ZXING Project: http://code.google.com/p/zxing/ which is licensed under the terms of the Apache Licence, Version 2.0</string>

    <string name="settings">Settings</string>
    
    <string name="setting_format">Format</string>
    <string name="setting_format_details" formatted="false">see String.format: %1=barcode %2=title %3=timestamp</string>
    <string name="format_default" formatted="false">%3$tc;%1$s;%2$s%n</string>
    
    <string name="setting_email_to">Recipient eMail</string>
    <string name="setting_email_to_details">Separate multiple recipients with ","</string>
    <string name="setting_email_subject">Subject line</string>
    <string name="setting_email_subject_details">The subject line of the eMail</string>
    
    <string name="clear">Clear</string>
    <string name="send">Send e-Mail</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_question">Are you sure?</string>
    <string name="clear_contents">Clear contents</string>
</resources>